--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html> 
   
     <head>
-  <title>Yo winthu i got this video for you</title>
+  <title>___________TITLE______</title>
 </head>
   
     <style>
@@ -16,14 +16,16 @@ body {
 <body> 
 
 
-  <font size="10" color="white">Hope you like the song winthu. </font>  
-  <font size="10" color="black">Hope you like the song winthu. </font>  
+  <font size="10" color="white">r/GoForGold </font>   
   
-<video width="720" height="740" controls>
+<!-- <video width="720" height="740" controls>
   <source src="songcover.mp4" type="video/mp4">
   <source src="songcover.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
+-->
+  
+ <img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
 
 </body> 
 </html>
